--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,6 @@ body {
   width: 100%;
   height: 100%;
   padding: 0.5% 0;
-  background-color: rgb(44, 88, 104);
 }
 
 .header-container {
@@ -32,7 +31,7 @@ body {
   text-align: center;
   padding: 0.1rem 1.5rem;
   font-size: 2rem;
-  border: 0.1rem solid gold;
+  border: none;
   border-bottom: none;
 }
 
@@ -45,7 +44,6 @@ body {
   background-color: rgb(82, 73, 76);
   border-radius: 2rem;
   padding: 1rem;
-  border: 0.1rem solid gold;
 }
 
 .map {
@@ -56,11 +54,72 @@ body {
 }
 
 .workouts {
+  display: flex;
+  align-items: center;
   border-radius: 2rem;
   margin-top: 1rem;
+  padding: 1rem;
   height: 40%;
   width: 100%;
   background-color: white;
+}
+
+.formAndworkouts-container {
+  height: 100%;
+  width: 30%;
+  /* background-color: green; */
+  padding: 0.5rem;
+}
+
+.workout-form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(82, 73, 76);
+  border-radius: 2rem;
+  padding: 1rem;
+  color: white;
+  font-size: 2rem;
+}
+
+.workout-form--header {
+  font-weight: 500;
+}
+
+.workout-form--labels {
+  font-size: 1.5rem;
+  margin-top: 1.5rem;
+}
+
+.workout-form--inputs {
+  border-radius: 0.5rem;
+  border: none;
+  width: 80%;
+  outline: none;
+  padding: 0 0.5rem;
+  background-color: rgb(223, 223, 223);
+}
+
+.workout-form--inputs:focus {
+  background-color: white;
+}
+
+.workout-form--submitbtn {
+  height: 2.5rem;
+  color: black;
+  font-weight: 500;
+  font-size: 1.5rem;
+  width: 40%;
+  margin-top: 2rem;
+  border: none;
+  border-radius: 0.5rem;
+  background-color: gold;
+  cursor: pointer;
+}
+
+.workout-form--submitbtn:hover {
+  opacity: 0.8;
 }
 
 /* overriding default styles of Leaflet */
@@ -76,10 +135,24 @@ body {
 }
 
 .leaflet-container a.leaflet-popup-close-button {
-  color: gold;
+  color: white;
   font-weight: bold;
 }
 
 .leaflet-container a.leaflet-popup-close-button:hover {
-  color: rgb(199, 0, 0);
+  color: red;
+}
+
+.leaflet-touch .leaflet-bar a:first-child,
+.leaflet-touch .leaflet-bar a:last-child {
+  background-color: rgb(82, 73, 76);
+  border: none;
+  margin-top: 0.1rem;
+  border-radius: 0.5rem;
+  color: white;
+}
+
+.leaflet-touch .leaflet-control-layers,
+.leaflet-touch .leaflet-bar {
+  border: none;
 }
