--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 :root {
   height: 100%;
   font-size: 62.5%;
+  --main-color: rgb(44, 88, 104);
+  --popup-color: rgb(82, 73, 76);
 }
 
 * {
@@ -25,7 +27,7 @@ body {
 }
 
 .header {
-  background-color: rgb(82, 73, 76);
+  background-color: var(--main-color);
   color: white;
   border-radius: 2rem 2rem 0 0;
   text-align: center;
@@ -41,7 +43,7 @@ body {
   flex-direction: column;
   max-width: 95%;
   height: 95%;
-  background-color: rgb(82, 73, 76);
+  background-color: var(--main-color);
   border-radius: 2rem;
   padding: 1rem;
 }
@@ -55,6 +57,7 @@ body {
 
 .workouts {
   display: flex;
+  justify-content: space-evenly;
   align-items: center;
   border-radius: 2rem;
   margin-top: 1rem;
@@ -66,10 +69,10 @@ body {
 
 .workout-form {
   height: 100%;
-  width: 30%;
+  width: 32%;
   display: flex;
   flex-direction: column;
-  background-color: rgb(82, 73, 76);
+  background-color: var(--main-color);
   border-radius: 2rem;
   padding: 1rem;
   color: white;
@@ -78,7 +81,7 @@ body {
 
 .workout-form--header {
   font-weight: 500;
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .workout-form--labels {
@@ -101,7 +104,7 @@ body {
 .workout-form--inputs {
   border-radius: 0.5rem;
   border: none;
-  width: 80%;
+  width: 90%;
   outline: none;
   padding: 0 0.5rem;
   background-color: rgb(223, 223, 223);
@@ -128,30 +131,18 @@ body {
   opacity: 0.8;
 }
 
-/* .workouts {
-    display: flex;
-    align-items: center;
-    border-radius: 2rem;
-    margin-top: 1rem;
-    padding: 1rem;
-    height: 40%;
-    width: 100%;
-    background-color: white;
-  } */
-
 .workout-notes {
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 32%;
   height: 100%;
   border-radius: 2rem;
   padding: 1rem;
-  margin-left: 1%;
-  background-color: rgb(82, 73, 76);
+  background-color: var(--main-color);
 }
 
 .workout-notes--header {
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: 500;
   color: white;
 }
@@ -178,12 +169,48 @@ body {
   width: 100%;
 }
 
+.workouts-list-container {
+  display: flex;
+  flex-direction: column;
+  width: 32%;
+  height: 100%;
+  border-radius: 2rem;
+  padding: 1rem;
+  background-color: var(--main-color);
+}
+
+.workouts-list--main {
+  list-style-type: none;
+}
+
+.workouts-list--header {
+  font-size: 2rem;
+  color: white;
+  font-weight: 500;
+}
+
+.runstory {
+  color: white;
+  margin-top: 1rem;
+}
+
+.runstory--header {
+  font-size: 1.5rem;
+}
+
+.runstory--datapiece {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 /* overriding default styles of Leaflet */
 
 .leaflet-popup-content-wrapper,
 .leaflet-popup-tip {
-  background-color: rgb(44, 88, 104);
-  color: white;
+  background-color: gold;
+  color: black;
+  font-weight: 600;
   font-size: 1rem;
   max-width: 20rem;
   max-height: 10rem;
@@ -201,7 +228,7 @@ body {
 
 .leaflet-touch .leaflet-bar a:first-child,
 .leaflet-touch .leaflet-bar a:last-child {
-  background-color: rgb(82, 73, 76);
+  background-color: var(--main-color);
   border: none;
   margin-top: 0.1rem;
   border-radius: 0.5rem;
