--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ body {
 /*  */
 
 .workout-form {
+  position: relative;
   height: 100%;
   width: 32%;
   display: flex;
@@ -81,6 +82,50 @@ body {
   padding: 1rem;
   color: white;
   font-size: 2rem;
+}
+
+.form-hidder {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+  background-color: black;
+  border-radius: 2rem;
+  z-index: 1;
+}
+
+.form-hidder--hint {
+  position: absolute;
+  color: gold;
+  font-style: italic;
+  font-size: 1.5rem;
+  right: 5%;
+  top: 5%;
+  z-index: 2;
+}
+
+.discard {
+  display: flex;
+  flex-direction: row;
+  right: 1%;
+  align-items: center;
+  top: 5%;
+  width: 20%;
+  font-size: 1.5rem;
+  position: absolute;
+  display: none;
+}
+
+.discard--btn {
+  border-radius: 0.3rem;
+  padding: 0.2rem 0.7rem;
+  margin-left: 0.5rem;
+  border: none;
+  background-color: gold;
+  color: black;
+  font-weight: bold;
 }
 
 .workout-form--header {
@@ -228,7 +273,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 18%;
+  width: 25%;
   justify-content: space-evenly;
 }
 
@@ -237,7 +282,7 @@ body {
 }
 
 .runstory--datapiece--icon {
-  width: 2rem;
+  width: 2.5rem;
 }
 
 .runstory--datapiece--number {
