--- a/styles.css
+++ b/styles.css
@@ -109,10 +109,11 @@ body {
 .discard {
   display: flex;
   flex-direction: row;
-  right: 1%;
   align-items: center;
   top: 5%;
-  width: 20%;
+  width: 40%;
+  justify-content: flex-end;
+  right: 5%;
   font-size: 1.5rem;
   position: absolute;
   display: none;
@@ -126,6 +127,11 @@ body {
   background-color: gold;
   color: black;
   font-weight: bold;
+  cursor: pointer;
+}
+
+.discard--btn:hover {
+  opacity: 0.8;
 }
 
 .workout-form--header {
@@ -233,11 +239,13 @@ body {
   height: 100%;
   border-radius: 2rem;
   padding: 1rem;
+  overflow-y: auto;
   background-color: var(--main-color);
 }
 
 .workouts-list--main {
   list-style-type: none;
+  padding-left: 1rem;
 }
 
 .workouts-list--header {
@@ -380,4 +388,18 @@ body {
 
 [disabled]:hover {
   opacity: 1;
+}
+
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: gold;
+  border-radius: 2rem;
+}
+
+::-webkit-scrollbar-button {
+  opacity: 0;
+  height: 0.5rem;
 }
