--- a/styles.css
+++ b/styles.css
@@ -349,11 +349,12 @@ body {
   font-size: 1rem;
   max-width: 20rem;
   max-height: 10rem;
-  text-align: center;
 }
 
 .leaflet-popup-content-wrapper {
+  border-left: 0.4rem solid red;
   border-radius: 0.7rem;
+  text-align: center;
 }
 
 .leaflet-container a.leaflet-popup-close-button {
@@ -380,6 +381,13 @@ body {
 }
 
 /* special classes */
+
+.runStory--wrapper--tip {
+  background-color: rgb(45, 52, 57);
+  color: white;
+  border-left: 0.4rem solid yellowgreen;
+  font-weight: 300;
+}
 
 .hidden {
   display: none;
